# arm_controller

./: .gitignore
backend/: config.py  main.py  requirements.txt  test_ws.html
backend/camera/: camera_manager.py
backend/robot/: base_robot.py  robot_manager.py  simulated_robot.py  teensy_robot.py
backend/ros2/: ar4_ros2_bridge.py
backend/ros2/ar4_rcm_controller/: CMakeLists.txt  package.xml
backend/ros2/ar4_rcm_controller/ar4_rcm_controller/: rcm_kinematics_prototype.py
backend/ros2/ar4_rcm_controller/config/: rcm_params.yaml  rcm_viz.rviz
backend/ros2/ar4_rcm_controller/docs/: RCM_CONTROLLER.md
backend/ros2/ar4_rcm_controller/include/ar4_rcm_controller/: rcm_kinematics.hpp
backend/ros2/ar4_rcm_controller/launch/: rcm_simulation.launch.py
backend/ros2/ar4_rcm_controller/src/: rcm_controller_node.cpp  rcm_kinematics.cpp
backend/websocket/: ws_manager.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ControlPanel.tsx  Joystick.tsx  RobotArmVisualizer.tsx  StatusIndicators.tsx  TelemetryPanel.tsx  VideoPlayer.tsx
frontend/src/types/: telemetry.ts
